RESOLVED FIXED74235
[Microdata] Fix compilation error in MICRODATA enabled build.
https://bugs.webkit.org/show_bug.cgi?id=74235
Summary [Microdata] Fix compilation error in MICRODATA enabled build.
Arko Saha
Reported 2011-12-10 00:11:22 PST
MICRODATA enabled builds are now failing with following error, CXX Source/WebCore/dom/libWebCore_la-Document.lo /bin/mkdir -p ./.deps/DerivedSources ../../Source/WebCore/dom/Document.cpp: In member function ‘WTF::PassRefPtr<WebCore::NodeList> WebCore::Document::getItems(const WTF::String&)’: ../../Source/WebCore/dom/Document.cpp:5213:70: error: no matching function for call to ‘WebCore::NodeRareData::ensureNodeLists()’ ../../Source/WebCore/dom/NodeRareData.h:130:24: note: candidate is: WebCore::NodeListsNodeData* WebCore::NodeRareData::ensureNodeLists(WebCore::Node*) make[1]: *** [Source/WebCore/dom/libWebCore_la-Document.lo] Error 1 make[1]: Leaving directory `/home/arko/Workstation/WebKit/WebKitBuild/Release' make: *** [all] Error 2 Failed to build WebKit using 'make'!
Attachments
Patch (1.27 KB, patch)
2011-12-10 00:20 PST, Arko Saha
no flags
Arko Saha
Comment 1 2011-12-10 00:16:00 PST
This error is due to the changes committed in changeset: http://trac.webkit.org/changeset/102208. The signature of 'WebCore::NodeRareData::ensureNodeLists()' is changed. Now it takes Node as first parameter, hence resulting the error.
Arko Saha
Comment 2 2011-12-10 00:20:15 PST
WebKit Review Bot
Comment 3 2011-12-10 10:46:45 PST
Comment on attachment 118686 [details] Patch Clearing flags on attachment: 118686 Committed r102523: <http://trac.webkit.org/changeset/102523>
WebKit Review Bot
Comment 4 2011-12-10 10:46:49 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.