Microdata: Fix compilation error in MICRODATA enabled build. https://bugs.webkit.org/show_bug.cgi?id=74235

Patch by Arko Saha <arko@motorola.com> on 2011-12-10
Reviewed by Andreas Kling.

* dom/Document.cpp:
(WebCore::Document::getItems):

Canonical link: https://commits.webkit.org/90921@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102523 268f45cc-cd09-0410-ab3c-d52691b4dbfc