Source/WebCore/dom/Document.cpp
@@ -5210,7 +5210,7 @@ DocumentLoader* Document::loader() const
 #if ENABLE(MICRODATA)
 PassRefPtr<NodeList> Document::getItems(const String& typeNames)
 {
-    NodeListsNodeData* nodeLists = ensureRareData()->ensureNodeLists();
+    NodeListsNodeData* nodeLists = ensureRareData()->ensureNodeLists(this);
 
     // Since documet.getItem() is allowed for microdata, typeNames will be null string.
     // In this case we need to create an unique string identifier to map such request in the cache.
